KMeans: how determinate nb of clusters

--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -30,6 +30,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.cluster import hierarchy\n",
+    "from scipy.cluster.vq import kmeans, vq\n",
     "from scipy.spatial.distance import pdist, squareform"
    ]
   },
@@ -1035,6 +1036,97 @@
     "    leaf_font_size=10,\n",
     "    color_threshold=0.7 * max(Z[:, 2])\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bfd15f9-083a-4508-b72b-e686019880d8",
+   "metadata": {},
+   "source": [
+    "## Méthodes de partitionnement non-hiérarchiques"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acaeea7f-f64f-4718-87d9-30f2d649651b",
+   "metadata": {},
+   "source": [
+    "Si les techniques HAC reposent sur l’idée de regrouper progressivement les éléments proches dans un espace vectoriel, les méthodes de partitionnement non-hiérarchiques ne vont pas fonder de préjugés sur la ressemblance entre les données."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b3f1c8a-db03-416e-ac14-bb440809c36f",
+   "metadata": {},
+   "source": [
+    "### L’algorithme des *k*-moyennes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5ce6cd5-e4f2-4809-ac5b-f83053233fd3",
+   "metadata": {},
+   "source": [
+    "Il s’agit de la méthode de partitionnement la plus courante en analyse des données. Elle consiste à délimiter *k* clusters à la double condition qu’un cluster soit constitué au moins d’une donnée et que chaque donnée appartienne à un seul cluster. Rien de nouveau dans la formulation, mais la construction des clusters n’est cette fois-ci pas aussi rigide qu’avec les techniques HAC : lorsqu’un cluster est constitué, il peut à l’étape suivante se scinder ou fusionner avec un autre.\n",
+    "\n",
+    "On considère ces étapes :\n",
+    "\n",
+    "1. On détermine arbitrairement un nombre *k* de centroïdes ;\n",
+    "2. les données sont assignées au cluster le plus proche ;\n",
+    "3. les centroïdes sont recalculés ;\n",
+    "4. il convient enfin de répéter les étapes 2 et 3 tant que nécessaire.\n",
+    "\n",
+    "![*k*-means clustering](./figs/kmeans.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61d83f02-d46b-4436-b0c9-827f5854545f",
+   "metadata": {},
+   "source": [
+    "#### Déterminer le nombre initial de centroïdes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c405623c-f75f-438f-8906-8e1f50a8e548",
+   "metadata": {},
+   "source": [
+    "Comme l’assignation d’un point à un cluster est au départ aléatoire, que le nombre de centroïdes est arbitraire et que l’algorithme ne garantit pas la meilleure classification possible, il est nécessaire d’effectuer plusieurs tests et d’évaluer leurs performances avant de figer les paramètres du modèle.\n",
+    "\n",
+    "Concernant le nombre de centroïdes, plutôt que de partir à l’aveuglette, on peut le décider à partir d’un diagramme d’éboulis qui permet de visualiser l’évolution de l’inertie (somme des distances des points au centre des clusters) en fonction du nombre de clusters :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfd5d5d9-ee3a-45de-824e-c3c86c29504e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# distance matrix\n",
+    "distances = pdist(df.values, metric='euclidean')\n",
+    "distance_matrix = squareform(distances)\n",
+    "\n",
+    "# range of clusters to try\n",
+    "n_clusters_range = range(1, 11)\n",
+    "\n",
+    "# evolution of inertia\n",
+    "inertia = []\n",
+    "\n",
+    "# calculate inertia for each nb of clusters\n",
+    "for n_clusters in n_clusters_range:\n",
+    "    centroids, _ = kmeans(df.astype(float), n_clusters)\n",
+    "    _, distortion = vq(df.astype(float), centroids)\n",
+    "    inertia.append(distortion.sum())\n",
+    "\n",
+    "plt.plot(n_clusters_range, inertia, marker='o', linestyle='-', markersize=8, linewidth=2)\n",
+    "plt.xlabel('Number of clusters', fontsize=12)\n",
+    "plt.ylabel('Inertia', fontsize=12)\n",
+    "plt.title('Elbow method for optimal number of clusters', fontsize=14)\n",
+    "plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
