--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -29,6 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "from scipy.cluster import hierarchy\n",
     "from scipy.cluster.vq import kmeans, vq\n",
     "from scipy.spatial.distance import pdist, squareform"
@@ -1081,6 +1082,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25faf5ac-b4fc-48dd-a39a-f1d27916b430",
+   "metadata": {},
+   "source": [
+    "#### Préparer les données"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "512f3022-42e7-423a-be10-f8413454e574",
+   "metadata": {},
+   "source": [
+    "Les algorithmes contenus dans les bibliothèques spécialisées nécessitent presque toujours de normaliser les données avant de les injecter dans les fonctions statistiques. Pour rappel, l’opération consiste, pour chaque variable, à retirer à une observation la moyenne puis à diviser par l’écart-type, selon l’expression :\n",
+    "\n",
+    "$$\n",
+    "Z = \\frac{X − \\mu}{\\sigma}\n",
+    "$$\n",
+    "\n",
+    "Avec *Numpy* et *Pandas*, on peut procéder en une seule passe si on n’omet pas le paramètre `axis=0` qui opère colonne par colonne :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "345a0c80-af10-4ee3-b380-ee32eac8c5a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_scaled = (df.values - np.mean(df.values, axis=0)) / np.std(df.values, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "61d83f02-d46b-4436-b0c9-827f5854545f",
    "metadata": {},
    "source": [
@@ -1105,7 +1138,7 @@
    "outputs": [],
    "source": [
     "# distance matrix\n",
-    "distances = pdist(df.values, metric='euclidean')\n",
+    "distances = pdist(df_scaled, metric='euclidean')\n",
     "distance_matrix = squareform(distances)\n",
     "\n",
     "# range of clusters to try\n",
@@ -1116,8 +1149,8 @@
     "\n",
     "# calculate inertia for each nb of clusters\n",
     "for n_clusters in n_clusters_range:\n",
-    "    centroids, _ = kmeans(df.astype(float), n_clusters)\n",
-    "    _, distortion = vq(df.astype(float), centroids)\n",
+    "    centroids, _ = kmeans(df_scaled, n_clusters)\n",
+    "    _, distortion = vq(df_scaled, centroids)\n",
     "    inertia.append(distortion.sum())\n",
     "\n",
     "plt.plot(n_clusters_range, inertia, marker='o', linestyle='-', markersize=8, linewidth=2)\n",
@@ -1127,6 +1160,135 @@
     "plt.grid(True, linestyle='--', alpha=0.7)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee4c9546-866a-42b3-a23a-58a55e436ca7",
+   "metadata": {},
+   "source": [
+    "#### Interpréter les clusters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42797ade-fe2a-4d65-a02c-0dfaf2bf33f1",
+   "metadata": {},
+   "source": [
+    "La fonction `kmeans()` de *Scipy* permet ensuuite d’appliquer l’algorithme des *k*-moyennes :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c1d308a-2def-449d-b88d-bab14a854f1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_clusters = 6\n",
+    "\n",
+    "centroids, _ = kmeans(df_scaled, n_clusters)\n",
+    "clusters, _ = vq(df_scaled, centroids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "131df150-2435-4dda-b72f-e6f70181a3f2",
+   "metadata": {},
+   "source": [
+    "La variable `clusters` enregistre désormais les étiquettes des différents regroupements, tant et si bien qu’il est possible de la réinjecter dans le *data frame* pour une meilleure lisibilité :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ffb4318-4ef0-465a-ad51-332a382d34d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Cluster'] = clusters\n",
+    "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40c98179-950e-4edf-bc1c-2848e2c15ab0",
+   "metadata": {},
+   "source": [
+    "L’un des premiers marqueurs du partitionnement serait de compter le nombre d’observations dans un cluster afin de révéler des déséquilibres dans la distribution :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d235e18-3764-4127-9279-9e1b532079cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.Cluster.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "848494aa-622a-447b-ae71-a880403c2f22",
+   "metadata": {},
+   "source": [
+    "La variable `centroids` permet quant à elle de visualiser les centres des clusters :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af9269cf-457a-4518-9a5c-80492375159f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(centroids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e4e3211-9e9a-4291-bee5-67bf33b44f89",
+   "metadata": {},
+   "source": [
+    "Chaque vecteur ligne de la matrice représente un cluster et chaque vecteur colonne une variable (Sciences, Politique, Littérature…). Les valeurs positives et négatives indiquent quelle variable est dominante pour tel ou tel cluster afin de révéler les influences. Si par exemple le cluster n°2 dispose de valeurs fortes en Philosophie et Littérature, cela signifie que ces catégories ont eu beaucoup d’importance lors du calcul du centroïde. En opérant ainsi cluster par cluster, on peut révéler les catégories qui les différencient.\n",
+    "\n",
+    "Visuellement, l’analyse sera facilitée avec une carte de chaleur (*heatmap*) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "840b2860-5996-49f6-8b0e-a25592217eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# centroids into a dataframe for better visualization\n",
+    "columns = df.columns[:-1] # cause we've just added another column 'Cluster'\n",
+    "centroids_df = pd.DataFrame(centroids, columns=columns)\n",
+    "\n",
+    "# heatmap\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.heatmap(centroids_df, annot=True, cmap=\"coolwarm\", cbar=True, linewidths=0.5)\n",
+    "plt.title(\"Heatmap\")\n",
+    "plt.xlabel(\"Features\")\n",
+    "plt.ylabel(\"Clusters\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91a3a821-b76b-46b6-a8b9-f84e21ca6e3b",
+   "metadata": {},
+   "source": [
+    "Il n’est pas toujours simple de tirer des conclusions d’un partitionnement des données. Si l’on relève des déséquilibres dans la distribution des observations ou si une trop forte influence d’une caractéristique sur un cluster, cela peut simplement venir de la nature même des données. Dans les autres cas, on peut toutefois émettre des hypothèses :\n",
+    "\n",
+    "- Des clusters déséquilibrés suggèrent de revoir le nombre de clusters à la hausse ;\n",
+    "- des clusters très petits peuvent révéler l’existence de données aberrantes qui faussent le partitionnement ;\n",
+    "- des caractéristiques trop fortes indiquent sans doute un biais à évaluer.\n",
+    "\n",
+    "La solution n’est pas plus simple à trouver. Bien souvent, il faudra multiplier les techniques afin d’obtenir les meilleurs résultats."
    ]
   }
  ],
