--- a/4.data-analysis/1.about-matrices.ipynb
+++ b/4.data-analysis/1.about-matrices.ipynb
@@ -180,22 +180,21 @@
    "id": "64ef2c40-65d7-4493-bd7d-397685ebe1f6",
    "metadata": {},
    "source": [
-    "Un vecteur quant à lui se représente sous la forme d’un tableau unidimensionnel de valeurs :\n",
+    "Un vecteur est un tableau unidimensionnel de valeurs appelées composantes :\n",
     "\n",
     "$$\n",
-    "\\begin{pmatrix}\n",
+    "\\vec{A} = \\begin{pmatrix}\n",
     "  2 \\\\\n",
     "  -\\frac{2}{3} \\\\\n",
     "  \\pi\n",
     "\\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "Il est constitué d’autant de composantes que de dimensions de l’espace où il se situe. Dans l’exemple précédent, le vecteur se situant dans un espace vectoriel en trois dimensions, il dispose de trois composantes.\n",
+    "Un vecteur se situe dans un espace vectoriel dont le nombre de dimensions détermine le nombre de ses composantes. Dans l’exemple précédent, le vecteur $\\vec{A}$ appartient à un espace tridimensionnel. Un vecteur est par ailleurs décrit par trois caractéristiques :\n",
     "\n",
-    "Un vecteur est par ailleurs décrit par trois caractéristiques :\n",
-    "- **Son sens.** Il s’agit de son orientation dans l’espace (vers le haut, vers la bas…).\n",
-    "- **Sa direction.** Elle décrit la manière dont le vecteur s’oriente relativement à un axe de référence.\n",
-    "- **Sa norme.** Elle représente la longueur du vecteur (la distance qui le sépare du point d’origine) et se calcule par la formule $\\| \\vec{v} \\| = \\sqrt{\\vec{v} \\cdot \\vec{v}}$, ce qui donne pour notre exemple : $\\| \\vec{v} \\| = \\sqrt{2^2 + -\\frac{2}{3}^2 + \\pi^2}$"
+    "- **Sa norme.** Elle représente la longueur du vecteur, c’est-à-dire la distance entre le point d'origine et le vecteur. La norme (ou magnitude) se calcule par la formule : $\\| \\vec{v} \\| = \\sqrt{\\vec{v} \\cdot \\vec{v}}$, ce qui donne pour notre exemple : $\\| \\vec{v} \\| = \\sqrt{2^2 + (-\\frac{2}{3})^2 + \\pi^2}$\n",
+    "- **Sa direction.** Elle décrit la droite sur laquelle le vecteur se situe, indépendamment de son sens et se calcule par la formule $\\hat{v} = \\frac{\\vec{v}}{\\|\\vec{v}\\|}$ où $\\hat{v}$ représente son vecteur unitaire, un vecteur qui pointe dans la même direction mais dont la norme est égale à 1.\n",
+    "- **Son sens.** Il s’agit de l’orientation du vecteur sur cette droite (vers le haut ou vers le bas)."
    ]
   },
   {
@@ -2190,7 +2189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
