--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -1290,6 +1290,58 @@
     "\n",
     "La solution n’est pas plus simple à trouver. Bien souvent, il faudra multiplier les techniques afin d’obtenir les meilleurs résultats."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99ea7328-9586-40f8-92f7-f7f4b3b21eff",
+   "metadata": {},
+   "source": [
+    "## Évaluer la qualité d’une partition d’un ensemble"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d117f63b-afde-4f21-bc96-c7be69f8e331",
+   "metadata": {},
+   "source": [
+    "### Le coefficient de silhouette"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68bcbf01-eabb-4485-8476-b239e86dc11c",
+   "metadata": {},
+   "source": [
+    "Pour évaluer si un point donné a correctement été attribué à son cluster, on utilise ordinairement une mesure appelée **coefficient de silhouette**, qui se calcule grâce à l’expression :\n",
+    "\n",
+    "$$\n",
+    "S(i) = \\frac{b(i) - a(i)}{\\max(a(i), b(i))}\n",
+    "$$\n",
+    "\n",
+    "Où :\n",
+    "\n",
+    "- $a(i)$ est la distance moyenne entre le point *i* et tous les autres points du même cluster ;\n",
+    "- $b(i)$ est la distance moyenne entre le point *i* et tous les points du cluster le plus proche (autre que le sien).\n",
+    "\n",
+    "Prenons quatre points situés dans un espace bidimensionnel pour lesquels nous avons déjà effectué un partitionnement :\n",
+    "\n",
+    "||x|y|cluster|\n",
+    "|-|-|-|:-:|\n",
+    "|**A**|1|2|1|\n",
+    "|**B**|2|3|2|\n",
+    "|**C**|8|9|2|\n",
+    "|**D**|9|8|2|\n",
+    "\n",
+    "Nous souhaitons savoir si le point *B* a correctement été assigné au cluster 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edbc0dc4-5c3d-4456-84ff-4c22250da747",
+   "metadata": {},
+   "source": [
+    "#### 1e étape : calcul de la distance moyenne de *B* dans son propre cluster"
+   ]
   }
  ],
  "metadata": {
@@ -1308,7 +1360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
