--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -32,7 +32,8 @@
     "import seaborn as sns\n",
     "from scipy.cluster import hierarchy\n",
     "from scipy.cluster.vq import kmeans, vq\n",
-    "from scipy.spatial.distance import pdist, squareform"
+    "from scipy.spatial.distance import pdist, squareform\n",
+    "from sklearn.metrics import silhouette_samples"
    ]
   },
   {
@@ -1323,14 +1324,16 @@
     "- $a(i)$ est la distance moyenne entre le point *i* et tous les autres points du même cluster ;\n",
     "- $b(i)$ est la distance moyenne entre le point *i* et tous les points du cluster le plus proche (autre que le sien).\n",
     "\n",
-    "Prenons quatre points situés dans un espace bidimensionnel pour lesquels nous avons déjà effectué un partitionnement :\n",
+    "Prenons six points situés dans un espace bidimensionnel pour lesquels nous avons déjà effectué un partitionnement :\n",
     "\n",
     "||x|y|cluster|\n",
     "|-|-|-|:-:|\n",
     "|**A**|1|2|1|\n",
     "|**B**|2|3|2|\n",
-    "|**C**|8|9|2|\n",
-    "|**D**|9|8|2|\n",
+    "|**C**|3|4|1|\n",
+    "|**D**|8|9|2|\n",
+    "|**E**|9|8|2|\n",
+    "|**F**|24|31|3|\n",
     "\n",
     "Nous souhaitons savoir si le point *B* a correctement été assigné au cluster 2."
    ]
@@ -1341,6 +1344,155 @@
    "metadata": {},
    "source": [
     "#### 1e étape : calcul de la distance moyenne de *B* dans son propre cluster"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31babc0f-716c-48dc-bb7d-830e8cdfdf5a",
+   "metadata": {},
+   "source": [
+    "Comme le point *B* a été assigné au cluster n°2, nous souhaitons à cette étape évaluer la distance entre lui et tous les autres points du même cluster :\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "d(B,D) &= \\sqrt{(2-8)^2 + (3-9)^2} = \\sqrt{36 + 36} = 8.49 \\\\\n",
+    "d(B,E) &= \\sqrt{(2-9)^2 + (3-8)^2} = \\sqrt{49 + 25} = 8.60\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "De là, nous pouvons calculer la distance moyenne de *B* avec les autres points du cluster n°2 :\n",
+    "\n",
+    "$$\n",
+    "a(B) = \\frac{d(B,D) + d(B,E)}{2} = \\frac{8.49 + 8.60}{2} = 8.54\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc79f46b-325b-4afa-8f21-98895a458338",
+   "metadata": {},
+   "source": [
+    "#### 2e étape : calcul de la distance moyenne de *B* avec les points du cluster le plus proche"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acfb26a9-2193-4957-928d-0653d05d8e46",
+   "metadata": {},
+   "source": [
+    "Afin de déterminer quel est le plus proche des clusters 1 et 3, il convient d’opter au préalable d’une méthode de mesure pour quantifier cette distance (*single-linkage*, *complete-linkage*…).\n",
+    "\n",
+    "Optons pour la mesure entre les barycentres (centroïdes) des clusters :\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "c_1 &= (\\frac{1 + 3}{2}, \\frac{2 + 4}{2}) = (2, 3) \\\\\n",
+    "c_2 &= (\\frac{2 + 8 + 9}{3}, \\frac{3 + 9 + 8}{3}) = (6.33, 6.67) \\\\\n",
+    "c_3 &= (24, 31)\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Reste à calculer les distances :\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "d(c_2, c_1) &= \\sqrt{(6.33 - 2)^2 + (6.67-3)^2} = 5.68 \\\\\n",
+    "d(c_2, c_3) &= \\sqrt{(6.33 - 24)^2 + (6.67-31)^2} = 30.07\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Et, comme la question de savoir si le point *B* n’aurait pas mieux été dans un cluster très éloigné n’a aucun sens, on sélectionne la distance minimale, soit $d(c_2, c_1)$. Ensuite, nous évaluons la distance qui sépare le point *B* du cluster N°1 en prenant la moyenne des distances avec tous ses points :\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "d(B,A) &= \\sqrt{(2-1)^2 + (3-2)^2} = \\sqrt{1 + 1} = 1.41 \\\\\n",
+    "d(B,C) &= \\sqrt{(2-3)^2 + (3-4)^2} = \\sqrt{1 + 1} = 1.41\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "De là, nous pouvons calculer la distance moyenne de *B* avec les autres points du cluster n°1 :\n",
+    "\n",
+    "$$\n",
+    "a(B) = \\frac{d(B,A) + d(B,C)}{2} = \\frac{1.41 + 1.41}{2} = 1.41\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76b720ac-c504-42fd-adba-452f763aa721",
+   "metadata": {},
+   "source": [
+    "#### 3e étape : calculer la silhouette de *B*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04219857-20e8-40fa-801b-bf1d507298e5",
+   "metadata": {},
+   "source": [
+    "Reste à effectuer le calcul :\n",
+    "\n",
+    "$$\n",
+    "S(B) = \\frac{1.41 - 8.54}{8.54} = -0.83\n",
+    "$$\n",
+    "\n",
+    "Comme le coefficient de silhouette se situe dans un intervalle $[-1,1]$ où -1 désigne un point qui devrait appartenir à un autre cluster, 0 un point à la frontière entre deux clusters, et 1 un point parfaitement bien assigné, nous concluons que le point *B* serait mieux dans le cluster n°1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38f4694d-4cd4-4cf4-b545-77b80fc215ad",
+   "metadata": {},
+   "source": [
+    "#### Un diagramme de silhouette"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3c3766e-b649-4a6b-ae58-5fd9caa9ba10",
+   "metadata": {},
+   "source": [
+    "Plutôt que d’analyser point par point, il est préférable de produire une analyse qui montrera graphiquement quels points ont été mal assignés. Un tel graphique s’appelle *diagramme de silhouette* :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dc6cd17-a9af-47f4-af6a-d8c3df808ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coordinates\n",
+    "X = np.array([[1, 2], [2, 3], [3, 4], [8, 9], [9, 8], [24, 31]])\n",
+    "\n",
+    "# clusters\n",
+    "labels = np.array([1, 2, 1, 2, 2, 3])\n",
+    "\n",
+    "# silhouettes scores\n",
+    "silhouette = silhouette_samples(X, labels)\n",
+    "\n",
+    "# diagramm\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "y_lower = 10\n",
+    "n_clusters = len(np.unique(labels))\n",
+    "for i in range(n_clusters):\n",
+    "    cluster_silhouette = silhouette[labels == (i + 1)]\n",
+    "    cluster_silhouette.sort()\n",
+    "    y_upper = y_lower + len(cluster_silhouette)\n",
+    "    plt.barh(range(y_lower, y_upper), cluster_silhouette, height=1.0)\n",
+    "    y_lower = y_upper + 10\n",
+    "plt.title(\"Silhouette scores\")\n",
+    "plt.xlabel(\"Silhouette\")\n",
+    "plt.ylabel(\"Points\")\n",
+    "plt.axvline(x=0, color=\"red\", linestyle=\"--\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf86b888-7f09-4a49-b629-16e5a7fe7246",
+   "metadata": {},
+   "source": [
+    "Pour produire les scores de silhouette, nous avons ici utilisé la bibliothèque *Scikit-Learn* qui fournit un module `.metrics` où on peut puiser la méthode `.silhouette_samples()` pour calculer les scores de silhouette."
    ]
   }
  ],
@@ -1360,7 +1512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
