--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -393,6 +393,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9bdd28b9-b2b6-460d-acc5-fd5f0c0075d8",
+   "metadata": {},
+   "source": [
+    "### Autres mesures pour la distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "851737f6-96f3-47d6-b06c-a5cd993fa1fa",
+   "metadata": {},
+   "source": [
+    "Même si la distance euclidienne est souvent la mesure choisie pour évaluer l’espace qui sépare deux vecteurs, elle n’est pas la seule qui existe. Citons la **distance de Manhattan** qui mesure la somme des différences absolues entre les coordonnées des vecteurs et a l’avantage de réduire les calculs machines en ne travaillant que sur des valeurs entières, la **distance de Jaccard** qui compare des ensembles à l’aide du rapport entre l’intersection et l’union, ou encore la **distance cosinus**  qui mesure l’angle entre deux vecteurs dans un intervalle de $[0, 2]$, où 0 établit l’identité des vecteurs et 2 les juge complètement opposés. Cette mesure s’obtient par :\n",
+    "\n",
+    "$$\n",
+    "d(A,B) = 1 - \\cos{\\theta}\n",
+    "$$\n",
+    "\n",
+    "Où :\n",
+    "\n",
+    "$$\n",
+    "\\cos{\\theta} = \\frac{A \\cdot B}{\\|A\\| \\|B\\|}\n",
+    "$$\n",
+    "\n",
+    "La similarité cosinus est souvent utilisée en linguistique car elle conserve l'information sur la direction des vecteurs, tandis que la distance euclidienne évalue uniquement la distance géométrique entre les vecteurs. En établissant que deux vecteurs pointent dans la même direction de l’espace, la similarité cosinus permet d’inférer une similarité sémantique.\n",
+    "\n",
+    "Le résultat est un nombre situé dans l’intervalle $[−1,1]$ où :\n",
+    "- $1$ signifie que les vecteurs sont alignés dans la même direction ;\n",
+    "- $-1$ qu’ils pointent dans des directions opposées ;\n",
+    "- $0$ qu’ils sont orthogonaux, c’est-à-dire qu’il n’existe aucune relation directionnelle entre eux."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a221450a-ee13-4496-878b-d4515e1c69f7",
    "metadata": {},
    "source": [
@@ -1386,17 +1419,17 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "c_1 &= (\\frac{1 + 3}{2}, \\frac{2 + 4}{2}) = (2, 3) \\\\\n",
-    "c_2 &= (\\frac{2 + 8 + 9}{3}, \\frac{3 + 9 + 8}{3}) = (6.33, 6.67) \\\\\n",
-    "c_3 &= (24, 31)\n",
+    "\\mu_1 &= (\\frac{1 + 3}{2}, \\frac{2 + 4}{2}) = (2, 3) \\\\\n",
+    "\\mu_2 &= (\\frac{2 + 8 + 9}{3}, \\frac{3 + 9 + 8}{3}) = (6.33, 6.67) \\\\\n",
+    "\\mu_3 &= (24, 31)\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
     "Reste à calculer les distances :\n",
     "\n",
     "$$\\begin{align*}\n",
-    "d(c_2, c_1) &= \\sqrt{(6.33 - 2)^2 + (6.67-3)^2} = 5.68 \\\\\n",
-    "d(c_2, c_3) &= \\sqrt{(6.33 - 24)^2 + (6.67-31)^2} = 30.07\n",
+    "d(\\mu_2, \\mu_1) &= \\sqrt{(6.33 - 2)^2 + (6.67-3)^2} = 5.68 \\\\\n",
+    "d(\\mu_2, \\mu_3) &= \\sqrt{(6.33 - 24)^2 + (6.67-31)^2} = 30.07\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
@@ -1494,6 +1527,110 @@
    "source": [
     "Pour produire les scores de silhouette, nous avons ici utilisé la bibliothèque *Scikit-Learn* qui fournit un module `.metrics` où on peut puiser la méthode `.silhouette_samples()` pour calculer les scores de silhouette."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "483554b2-963c-4028-8bf7-378f0bfb47bf",
+   "metadata": {},
+   "source": [
+    "### L’inertie intra-clusters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06036bf6-9df9-4396-be0e-64b52f7ab92c",
+   "metadata": {},
+   "source": [
+    "Nous avons déjà abordé cette mesure au moment de parler de l’algorithme de partitionnement des *k*-moyennes. Elle évalue la dispersion des points au sein des clusters en effectuant la somme des carrés des distances entre chaque point et son centroïde. Elle est donnée par la formule :\n",
+    "\n",
+    "$$\n",
+    "\\text{Inertie Totale} = \\sum_{k=1}^K \\sum_{i \\in C_k} \\|x_i - \\mu_k\\|^2\n",
+    "$$\n",
+    "\n",
+    "Où :\n",
+    "\n",
+    "- $K$ est le nombre de clusters ;\n",
+    "- $C_k$ représente les points appartenant au cluster $k$•\n",
+    "- $x_i$ est un point appartenant au cluster $C_k$ ;\n",
+    "- $\\mu_k$ est le centroïde du cluster $C_k$.\n",
+    "\n",
+    "Reprenons notre exemple et effectuons le calcul pour le cluster n°1. Précédemment, nous avons calculé son centroïde tel que $\\mu_1 = (2,3)$. Il nous reste à évaluer la distance au carré de chaque point du cluster avec le centroïde.\n",
+    "\n",
+    "1. Pour $A=(1,2)$ :\n",
+    "\n",
+    "$$\n",
+    "\\|A - \\mu_1\\|^2 = (1 - 2)^2 + (2 - 3)^2 = (-1)^2 + (-1)^2 = 1 + 1 = 2\n",
+    "$$\n",
+    "\n",
+    "2. Pour $C=(3,4)$ :\n",
+    "\n",
+    "$$\n",
+    "\\|C - \\mu_1\\|^2 = (3 - 2)^2 + (4 - 3)^2 = 1^2 + 1^2 = 1 + 1 = 2\n",
+    "$$\n",
+    "\n",
+    "Nous en concluons que l’inertie du cluster n°1 est de $2 + 2 = 4$. Si nous répétons les calculs pour les clusters 2 et 3 et que nous faisons la somme des inerties intra-clusters, nous obtenons un indice de 53,33. L’inertie mesurant la densité des clusters, on la compare avec celle d’autres partitionnements afin de trouver la valeur la plus basse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "472cddf4-3d67-4b68-9a1e-3b8662df56ba",
+   "metadata": {},
+   "source": [
+    "### L’indice de Davies-Bouldin (DB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd6f3967-3d7a-4ef5-84ad-0b6091ff2731",
+   "metadata": {},
+   "source": [
+    "L’indice DB évalue la qualité d’un partitionnement en mesurant la compacité et la séparation des clusters. Un indice plus faible indique un meilleur partitionnement, avec des clusters bien compacts et bien séparés. Il est défini comme la moyenne des *ratios de similarité* $R_{ij}$ entre chaque paire de clusters $i$ et $j$, où $R_{ij}$ compare :\n",
+    "\n",
+    "- La compacité : la dispersion des points à l’intérieur des clusters ;\n",
+    "- la séparation : la distance entre les centroïdes des clusters.\n",
+    "\n",
+    "$$\n",
+    "\\text{DB} = \\frac{1}{K} \\sum_{i=1}^K \\max_{j \\neq i} R_{ij}\n",
+    "$$\n",
+    "\n",
+    "Avec :\n",
+    "\n",
+    "$$\n",
+    "R_{ij} = \\frac{S_i + S_j}{M_{ij}}\n",
+    "$$\n",
+    "\n",
+    "Où :\n",
+    "\n",
+    "- $S_i$ exprime la dispersion intra-cluster (ex : l’inertie) ;\n",
+    "- $M_{ij}$ est la distance entre les centroïdes des clusters $i$ et $j$ (ex : distance euclidienne).\n",
+    "\n",
+    "Si nous calculons le ratio de similarité pour les clusters 1 et 2 dans notre exemple, nous obtenons :\n",
+    "\n",
+    "$$\n",
+    "R_{1,2} = \\frac{4 + 49.334}{5.67} \\approx 9.4\n",
+    "$$\n",
+    "\n",
+    "Et pour les autres paires de clusters :\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "R_{1,3} &= \\frac{4 + 0}{35.64} \\approx 0.112 \\\\\n",
+    "R_{2,3} &= \\frac{49.334 + 0}{30.05} \\approx 1.64\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "On termine par effectuer la moyenne des ratios pour toutes les paires de clusters :\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\text{DB} &= \\frac{1}{3} \\left( \\max(R_{1,2}, R_{1,3}) + \\max(R_{2,1}, R_{2,3}) + \\max(R_{3,1}, R_{3,2}) \\right) \\\\\n",
+    "&= \\frac{1}{3} \\left( \\max(9.4, 0.112) + \\max(9.4, 1.64) + \\max(0.112, 1.64) \\right) \\\\\n",
+    "&= \\frac{1}{3} \\left( 9.4 + 9.4 + 1.64 \\right) \\\\\n",
+    "&= \\frac{1}{3} \\times 20.44 \\\\\n",
+    "&\\approx 6.81\n",
+    "\\end{align*}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
@@ -1512,7 +1649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
