--- a/4.data-analysis/answers/5.2.comparing-vectors.ipynb
+++ b/4.data-analysis/answers/5.2.comparing-vectors.ipynb
@@ -221,13 +221,7 @@
    "id": "7935700e-b4d9-4bef-b410-9c85e7640d78",
    "metadata": {},
    "source": [
-    "Deux vecteurs ayant une orientation dans l’espace, une autre mesure proposée va s’attacher à l’angle qu’ils forment entre eux afin de distinguer à quel point ils se ressemblent : la similarité cosinus. Elle se calcule avec l’expression suivante :\n",
-    "\n",
-    "$$\n",
-    "\\cos{\\theta} = \\frac{\\vec{A} \\cdot \\vec{B}}{\\|\\vec{A}\\| \\|\\vec{B}\\|}\n",
-    "$$\n",
-    "\n",
-    "Le résultat est un nombre situé dans l’intervalle $[-1,1]$ où les valeurs extrêmes signifient que les vecteurs sont colinéaires mais soit parfaitement alignés dans la même direction pour un score de 1, soit qu’ils pointent dans des directions opposées. Un score de 0 quant à lui témoigne d’une indépendance totale entre les deux vecteurs analysés vu qu’ils sont orthogonaux.\n",
+    "Deux vecteurs ayant une orientation dans l’espace, une autre mesure proposée va s’attacher à l’angle qu’ils forment entre eux afin de distinguer à quel point ils se ressemblent : la similarité cosinus.\n",
     "\n",
     "**1e étape :** combiner les vecteurs de mots-clés :"
    ]
