How to make predictions

--- a/4.data-analysis/6.linear-discriminant-analysis.ipynb
+++ b/4.data-analysis/6.linear-discriminant-analysis.ipynb
@@ -415,7 +415,7 @@
    "id": "0e35c72b-3ae2-41be-aea7-ad2e37e08c3b",
    "metadata": {},
    "source": [
-    "### Résolution"
+    "### Projeter les données sur un sous-espace vectoriel"
    ]
   },
   {
@@ -486,7 +486,7 @@
    "id": "f97eaa67-a652-4ab8-aa5d-4cc81cf8db14",
    "metadata": {},
    "source": [
-    "Finalement, nous projetons les données dans le sous-espace :"
+    "Finalement, nous projetons les données sur le sous-espace :"
    ]
   },
   {
@@ -550,7 +550,7 @@
    "id": "5b558b95-5221-4566-aba8-6155b648c963",
    "metadata": {},
    "source": [
-    "Si la LDA a bien fonctionné, nous devrions voir des partitions bien distinctes dans un nuage de points :"
+    "Preuve que la LDA a bien fonctionné, nous visualisons dans un nuage de points des partitions distinctes qui nous incitent à attribuer la classe *mystery* au nouveau texte :"
    ]
   },
   {
@@ -562,12 +562,24 @@
    "source": [
     "plt.figure(figsize=(8, 6))\n",
     "\n",
-    "sns.scatterplot(data=df_projected, x='Component 1', y='Component 2', hue='Class', palette='Set2', style='Class', s=100, alpha=0.7)\n",
+    "sns.scatterplot(\n",
+    "    data=df_projected,\n",
+    "    x='Component 1',\n",
+    "    y='Component 2',\n",
+    "    hue='Class',\n",
+    "    palette='Set2',\n",
+    "    style='Class',\n",
+    "    s=100,\n",
+    "    alpha=0.7\n",
+    ")\n",
     "\n",
     "plt.title('Linear Discriminant Analysis (LDA)', fontsize=16)\n",
     "plt.xlabel('Component 1', fontsize=12)\n",
     "plt.ylabel('Component 2', fontsize=12)\n",
     "plt.legend(title='Class', title_fontsize='13', fontsize='11', loc='best')\n",
+    "\n",
+    "plt.xlim(-2, 2)\n",
+    "plt.ylim(-1, 1)\n",
     "plt.grid(True, linestyle='--', alpha=0.5)\n",
     "\n",
     "plt.show()"
@@ -578,60 +590,197 @@
    "id": "a97548b6-fae1-466a-a6c6-fb9fcc6559a4",
    "metadata": {},
    "source": [
-    "## Calculer les fonctions discriminantes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a64aa3e-547d-4204-bc7f-1bc42fc9a328",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "S_W = np.zeros((2, 2))  # 2D pour l'espace projeté\n",
-    "for c in classes:\n",
-    "    class_data = X_projected[y == c]\n",
-    "    class_cov = np.cov(class_data.T)  # covariance de la classe dans l'espace projeté\n",
-    "    S_W += (class_data.shape[0] - 1) * class_cov\n",
-    "\n",
-    "# Calcul de l'inverse de S_W (en 2 dimensions)\n",
-    "S_W_inv = np.linalg.inv(S_W)\n",
-    "\n",
-    "means_classes = np.array([\n",
-    "    np.mean(X_projected[y == c], axis=0) for c in classes\n",
-    "])\n",
-    "priors = [np.sum(y == c) / len(y) for c in classes]\n",
-    "discriminant_scores = []\n",
-    "\n",
-    "for k, class_mean in enumerate(means_classes):\n",
-    "    # Calcul des poids W_k pour chaque classe\n",
-    "    W_k = np.dot(S_W_inv, class_mean - np.mean(X_projected, axis=0))\n",
-    "\n",
-    "    # Calcul du biais b_k (en supposant que vous avez calculé les moyennes correctement)\n",
-    "    b_k = -0.5 * np.dot(class_mean, np.dot(S_W_inv, class_mean)) + np.log(priors[k])\n",
-    "\n",
-    "    # Calcul de la fonction discriminante pour cette classe\n",
-    "    score = np.dot(new_data_projected, W_k) + b_k\n",
-    "    discriminant_scores.append(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ae6d224-b84e-482a-9efb-48fba93c4bc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_class = classes[np.argmax(discriminant_scores)]\n",
-    "print(f\"Classe prédite pour la nouvelle observation : {predicted_class}\")"
+    "## Établir un modèle discriminant"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2515bbe1-8b09-486a-84e7-4073403ff3c5",
+   "id": "c1de7ecf-797d-4f37-9ee7-c38d9f8acaf0",
    "metadata": {},
    "source": [
-    "## Évaluer la performance"
+    "Si elle s’interprète facilement, la preuve graphique n’est pas suffisante pour parler de modèle de classification. Une fois les données projetées sur un sous-espace de $k-1$ classes, nous pouvons construire un modèle basé sur les fonctions discriminantes de la LDA :\n",
+    "\n",
+    "$$\n",
+    "g_k(x) = W_k \\cdot x + b_k\n",
+    "$$\n",
+    "\n",
+    "Où :\n",
+    "\n",
+    "- $W_k$ figure les coefficients (ou poids) ;\n",
+    "- $b_k$ le biais."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd7c99ca-0462-47ea-8885-9e388da21106",
+   "metadata": {},
+   "source": [
+    "### Calculer les coefficients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df9e4160-c6ff-465a-a0e3-4a2d3481b428",
+   "metadata": {},
+   "source": [
+    "La matrice des coefficients se calcule comme :\n",
+    "\n",
+    "$$\n",
+    "W_k = S_W^{−1} \\cdot (\\mu_k − \\mu)\n",
+    "$$\n",
+    "\n",
+    "Où :\n",
+    "\n",
+    "- $\\mu_k$ la moyenne de la classe $k$ ;\n",
+    "- $\\mu$ la moyenne globale.\n",
+    "\n",
+    "Nous avons besoin de connaître en premier lieu les moyennes globale et de chaque classe dans l’espace projeté :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae80803-46b5-4d84-8da7-d8ddf6861b4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# overall mean in the projected space\n",
+    "mean_overall = np.mean(X_projected, axis=0)\n",
+    "\n",
+    "# mean of each class in the projected space\n",
+    "means_per_class = [np.mean(X_projected[y == c], axis=0) for c in classes]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aa0e75d-2410-4f26-b3ee-b8b43bca5725",
+   "metadata": {},
+   "source": [
+    "Ensuite, nous recalculons l’inverse de la matrice de dispersion intra-classe dans l’espace projeté. Dans ce contexte, $S_W$ se comprend comme la matrice de covariance des dimensions réduites obtenues après projection sur les vecteurs propres. Comme `X_projected` est une matrice contenant en lignes les observations et en colonnes les dimensions, il nous suffit de la transposer pour obtenir la covariance des dimensions :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fe3e3cb-7504-4e5d-8147-6b6a21d1953d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S_W_projected = np.cov(X_projected.T)\n",
+    "S_W_inv = np.linalg.inv(S_W_projected)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27fd2264-ee55-4538-a759-ed3bf51d1f56",
+   "metadata": {},
+   "source": [
+    "### Calculer le biais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a445b15f-1dd8-4e02-a470-ffdbee4d97d4",
+   "metadata": {},
+   "source": [
+    "Le biais est calculé par :\n",
+    "\n",
+    "$$\n",
+    "b_k = -\\frac{1}{2} \\mu_k^T \\cdot S_W^{−1} \\cdot \\mu_k + \\log⁡(\\pi_k)\n",
+    "$$\n",
+    "\n",
+    "Où $\\pi_k$ est le *prior* (probabilité a priori) de la classe $k$. L’existence de ce *prior* se justifie par la possibilité de déséquilibre de représentation d’une classe dans les données d’apprentissage. Pour éviter ce risque, le modèle prend en compte les connaissances a priori. De manière naïve, en présence de trois classes nous estimons le *prior* à 0.33 pour chacune.\n",
+    "\n",
+    "Dans la pratique, il faut considérer ce mécanisme comme une possibilité de représenter les connaissances a priori : si nous sommes certain·es qu’une classe se rencontre davantage dans la nature, il nous faudra bouger le curseur en conséquence. Et si en revanche les données sont parfaitement équilibrées, comme dans notre exemple où nous avons trois représentants de chaque classe, les *priors* n’auront aucun impact et pourraient être ignorées. Nous tenons toutefois à les conserver :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09f30461-6e26-42db-8462-c99d01e7dbcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "priors = [np.sum(y == c) / len(y) for c in classes]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb1c75d1-d8c0-4990-8d23-fbf15d4dfd6f",
+   "metadata": {},
+   "source": [
+    "### Construire le modèle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cb8f058-8a72-4cd7-be84-9fd1e370bb2f",
+   "metadata": {},
+   "source": [
+    "Tous les éléments étant en place, nous pouvons construire le modèle en reprenant la formule énoncée plus haut :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40b4376f-a2ad-439c-864f-804fdd53ea32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coefficients = []\n",
+    "for k, class_mean in enumerate(means_per_class):\n",
+    "    W_k = np.dot(S_W_inv, class_mean - mean_overall)\n",
+    "    b_k = -0.5 * np.dot(class_mean, np.dot(S_W_inv, class_mean)) + np.log(priors[k])\n",
+    "    coefficients.append((W_k, b_k))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12d4db97-f31e-4546-bdbc-e0dbd4cccfc4",
+   "metadata": {},
+   "source": [
+    "### Effectuer des prédictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6bf567d-7fae-458a-95f0-a2425e419973",
+   "metadata": {},
+   "source": [
+    "Il est temps d’utiliser le modèle pour prédire la classe de notre nouvelle observation, selon l'expression :\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} = \\arg \\max_k g_k(x)\n",
+    "$$\n",
+    "\n",
+    "La formule se comprend facilement : nous appliquons la fonction discriminante du modèle ajusté à chaque classe et choisissons la classe correspondant à l’argument qui maximise la fonction discriminante."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ae672c4-202a-4656-bafc-d93e3f4687e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = [\n",
+    "    np.dot(new_data_projected, W_k) + b_k\n",
+    "    for W_k, b_k in coefficients\n",
+    "]\n",
+    "\n",
+    "print(\n",
+    "    f\"Score : {np.max(scores):.4f}\",\n",
+    "    f\"Catégorie : {classes[np.argmax(scores)]}\",\n",
+    "    sep=\"\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "768d81ab-d48f-4dfd-8516-c367a7431350",
+   "metadata": {},
+   "source": [
+    "Cerise sur le gâteau, il est possible de ressortir la probabilité associée à chaque classe grâce à la fonction de densité a posteriori :"
    ]
   },
   {
@@ -640,6 +789,27 @@
    "id": "24c6c463-7c52-4479-a2f7-19c8464741a8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# according to Bayes theorem\n",
+    "exps = np.exp(scores - np.max(scores))\n",
+    "probabilities = exps / np.sum(exps)\n",
+    "\n",
+    "for class_name, p in zip(classes, probabilities):\n",
+    "    print(f'{class_name} : {p[0]:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2515bbe1-8b09-486a-84e7-4073403ff3c5",
+   "metadata": {},
+   "source": [
+    "## Évaluer la performance du modèle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0e1ecb-365f-435a-b718-79af373b5c77",
+   "metadata": {},
    "source": []
   }
  ],
